Features:
  * A built in changelog. Will be auto-shown when updated.
    Could be manually opened with: "Help->Changelog".
  * When creating a new map the "dmm" extension will be set to file automatically.
  * "Show Icons" checkbox for the environment tree was replaced with "Collapse All" button.
    With it you can fold all opened nodes into the initial state.

Fixes:
  * An ancient bug which was the reason for map corruptions.